[gd_scene load_steps=4 format=3 uid="uid://cppxs2pexhy5l"]

[ext_resource type="Script" path="res://Scripts/ArbitraryLevel.gd" id="1_sr5xk"]
[ext_resource type="Texture2D" uid="uid://b8eyowuh3weer" path="res://Textures/OffCheckClipped.png" id="1_y3e34"]
[ext_resource type="Texture2D" uid="uid://do2hwugd2fw20" path="res://Textures/OnCheckClipped.png" id="3_3nnxo"]

[node name="FiveBar" type="HBoxContainer" node_paths=PackedStringArray("buttons")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_sr5xk")
offImage = ExtResource("1_y3e34")
onImage = ExtResource("3_3nnxo")
buttons = [NodePath("Button1"), NodePath("Button2"), NodePath("Button3"), NodePath("Button4"), NodePath("Button5")]

[node name="Button1" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("1_y3e34")
flat = true

[node name="Button2" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("1_y3e34")
flat = true

[node name="Button3" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("1_y3e34")
flat = true

[node name="Button4" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("1_y3e34")
flat = true

[node name="Button5" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("1_y3e34")
flat = true

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
